@@ -1,6 +1,7 @@
 package effectivejava.chapter5.item28;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
 import java.util.Random;
@@ -20,7 +21,7 @@ public class Chooser<T> {
     }
 
     public static void main(String[] args) {
-        List<Integer> intList = List.of(1, 2, 3, 4, 5, 6);
+        List<Integer> intList = Arrays.asList(1, 2, 3, 4, 5, 6);
 
         Chooser<Integer> chooser = new Chooser<>(intList);
 
